First part of port